[workspace]
# The chat-relayer's nautilus-style support crates are vendored in-repo
# under src/ — own copies, not shared with the coordinator at build time.
# Same member list shape as the coordinator's own root Cargo.toml.
members = [
    "src/init",
    "src/aws",
    "src/system",
    "src/nautilus-enclave",
    "src/pinaivu-protocol",
]

# The relayer binary lives outside the workspace because its profile +
# release tuning need to be independent (panic=abort, lto). Same pattern
# as nautilus-memwal-relayer.
exclude = ["src/relayer"]

resolver = "2"

[profile.release]
panic = "abort"
