[package]
name = "init"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "init"
path = "src/main.rs"

[dependencies]
# Owned copies, vendored in-repo — chat-relayer no longer depends on a
# sibling coordinator checkout (separate EC2 instances, separate repos).
aws = { path = "../aws" }
system = { path = "../system" }
libc = "0.2"
