[package]
name = "nautilus-enclave"
version = "0.1.0"
edition = "2021"

[features]
default = []
# `aws` enables real NSM attestation via the AWS Nitro Security Module driver.
# When disabled, a deterministic mock attestation is returned (dev mode).
aws = ["aws-nitro-enclaves-nsm-api"]

[dependencies]
anyhow = "1"
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
aes-gcm = "0.10"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
rand = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
aws-nitro-enclaves-nsm-api = { version = "0.4", optional = true }
