[package]
name = "pinaivu-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
hex = "0.4"
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
thiserror = "2"
anyhow = "1"
bcs = "0.1"

libp2p = { version = "0.56", features = [
    "tokio",
    "kad",
    "gossipsub",
    "noise",
    "yamux",
    "tcp",
    "identify",
    "ping",
    "request-response",
    "cbor",
    "macros",
    "ed25519",
] }

[dev-dependencies]
rand = "0.8"
