[package]
name = "chat-relayer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chat_relayer"
path = "src/main.rs"

[workspace]

[dependencies]
# Nautilus TEE — attestation, ephemeral keypair, NSM entropy.
# Path dep during local dev; the enclave Containerfile copies the
# source into the image at build time.
nautilus-enclave = { path = "../../../coordinator  /src/nautilus-enclave" }

# Shared wire types — DispatchToken, ChatMessage, NodePeerId, …
# Reused so the chat-relayer's outbound calls to pinaivu-api + the node
# stay in lockstep with the coordinator's schema.
pinaivu-protocol = { path = "../../../coordinator  /src/pinaivu-protocol" }

# Web framework
axum = { version = "0.8", features = ["macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# HTTP client (TS sidecar + pinaivu-api + node + Sui RPC)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Database — Postgres + pgvector for the chat-relayer's own memory store.
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
pgvector = { version = "0.4", features = ["sqlx"] }

# Auth (delegate-key Ed25519 signatures from chat clients)
ed25519-dalek = { version = "2", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bcs = "0.1.6"

# Rate limiting (Redis-backed)
redis = { version = "0.27", features = ["tokio-rustls-comp", "connection-manager"] }

# Async job queue (background Walrus uploads after analyze)
apalis     = { version = "0.7", default-features = false, features = ["tracing"] }
apalis-sql = { version = "0.7", features = ["postgres", "migrate"] }

# Crypto utilities
aes-gcm = "0.10"
zeroize = "1"
base64 = "0.22"
rand = "0.8"

# TLS (self-signed cert for local dev; operator certs in prod)
rcgen = "0.13"

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
dotenvy = "0.15"
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
aws = ["nautilus-enclave/aws"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
